# opengl

./: CMakeLists.txt
cube/: CMakeLists.txt  cube_app.cpp  cube_app.h  cube_cube_generator.cpp  cube_cube_generator.h  cube_main.cpp  cube_program.cpp  cube_program.h  cube_vertex_shader.glsl  run.sh
gasket2dline/: CMakeLists.txt  gasket2dline_app.cpp  gasket2dline_app.h  gasket2dline_main.cpp  gasket2dline_program.cpp  gasket2dline_program.h  gasket2dline_vectors.cpp  gasket2dline_vectors.h  run.sh
gasket2drand/: CMakeLists.txt  gasket2drand_app.cpp  gasket2drand_app.h  gasket2drand_main.cpp  gasket2drand_program.cpp  gasket2drand_program.h  gasket2drand_vectors.cpp  gasket2drand_vectors.h  gasket2drand_vertex_shader.glsl  run.sh
gasket3dline/: CMakeLists.txt  gasket3dline_app.cpp  gasket3dline_app.h  gasket3dline_generator.cpp  gasket3dline_generator.h  gasket3dline_main.cpp  gasket3dline_program.cpp  gasket3dline_program.h  run.sh
gasket3drand/: CMakeLists.txt  gasket3drand_app.cpp  gasket3drand_app.h  gasket3drand_frag_shader.glsl  gasket3drand_main.cpp  gasket3drand_program.cpp  gasket3drand_program.h  gasket3drand_vectors.cpp  gasket3drand_vectors.h  gasket3drand_vertex_shader.glsl  run.sh
gasket_01/: CMakeLists.txt
lookatortho/: CMakeLists.txt  lookatortho_app.cpp  lookatortho_app.h  lookatortho_cube_generator.cpp  lookatortho_cube_generator.h  lookatortho_main.cpp  lookatortho_program.cpp  lookatortho_program.h  lookatortho_vertex_shader.glsl  run.sh
perspective/: CMakeLists.txt  perspective_app.cpp  perspective_app.h  perspective_cube_generator.cpp  perspective_cube_generator.h  perspective_frag_shader.glsl  perspective_main.cpp  perspective_program.cpp  perspective_program.h  perspective_vertex_shader.glsl  run.sh
shared_lib/: CMakeLists.txt  opgl_app.cpp  opgl_app.h  opgl_file_utils.cpp  opgl_file_utils.h  opgl_my_exception.cpp  opgl_my_exception.h  opgl_shader_program.cpp  opgl_shader_program.h  opgl_vec.cpp  opgl_vec.h  opgl_vertex_array.cpp  opgl_vertex_array.h
sharedlib/: CMakeLists.txt  sharedlib_app.cpp  sharedlib_app.h  sharedlib_file_utils.h  sharedlib_json_param.cpp  sharedlib_json_param.h  sharedlib_math_utils.cpp  sharedlib_math_utils.h  sharedlib_matrix.cpp  sharedlib_matrix.h  sharedlib_my_exception.cpp  sharedlib_my_exception.h  sharedlib_out.h  sharedlib_parse_json.h  sharedlib_random_utils.h  sharedlib_shader_program.cpp  sharedlib_validator.cpp  sharedlib_validator.h  sharedlib_vector.cpp  sharedlib_vector.h  sharedlib_vertex_array.cpp  sharedlib_vertex_array.h
sharedlib/src/: sharedlib_app.cpp  sharedlib_app.h  sharedlib_buffer_block.cpp  sharedlib_buffer_block.h  sharedlib_file_utils.cpp  sharedlib_json_param.h  sharedlib_json_utils.cpp  sharedlib_json_utils.h  sharedlib_matrix.cpp  sharedlib_matrix.h  sharedlib_my_exception.h  sharedlib_opengl.h  sharedlib_out.cpp  sharedlib_parse_json.cpp  sharedlib_parse_json.h  sharedlib_random_utils.cpp  sharedlib_shader_program.cpp  sharedlib_shader_program.h  sharedlib_stringify.cpp  sharedlib_stringify.h  sharedlib_vector.cpp  sharedlib_vector.h  sharedlib_vertex_array.cpp
sharedlib/test/: test_validator.cpp  test_vector.cpp
sphere/: CMakeLists.txt
sphere/src/: sphere_app.cpp  sphere_app.h  sphere_main.cpp  sphere_sphere_generator.cpp  sphere_sphere_generator.h
sphere/test/: test_sphere_generator.cpp
sprlgt/: CMakeLists.txt  run.sh
sprlgt/config/: app_config.json
sprlgt/glsl/: frag_shader.glsl  vertex_shader.glsl
sprlgt/src/: sprlgt_app_config.cpp  sprlgt_app_config.h  sprlgt_main.cpp  sprlgt_sphere_generator.cpp  sprlgt_sphere_generator.h  sprlgt_sphere_lighting_app.cpp  sprlgt_sphere_lighting_app.h  sprlgt_sphere_lighting_shader_program.cpp  sprlgt_sphere_lighting_shader_program.h
sprlgt/test/: test_sphere_generator.cpp
test/: CMakeLists.txt  test_main.cpp  test_sharedlib_json_param.cpp  test_sharedlib_matrix.cpp  test_sharedlib_vector.cpp
tetra/: CMakeLists.txt  run.sh  tetra_app.cpp  tetra_app.h  tetra_main.cpp  tetra_program.cpp  tetra_program.h  tetra_vertex_shader.glsl
utils/: CMakeLists.txt
